<resources>
    <string name="app_name">Covid-19 Mobile Updater</string>
    <string name="india">India</string>
    <string name="world">WORLD</string>
    <string name="bad">BAD&#160;</string>
    <string name="good">GOOD&#160;</string>
    <string name="hello">Hello!</string>
    <string name="your_name">Your Name</string>
    <string name="sign_in_heading_below_text"><![CDATA[Enter email & password to continue]]></string>
    <string name="how_are_you_feeling_at_this_moment">How are you feeling at this moment?</string>
    <string name="update_cases">Update Cases</string>
    <string name="see_details"><u>see details</u></string>
    <string name="last_updated_06_march_2020">Last updated 06 March 2020</string>
    <string name="_0000">0</string>
    <string name="your_state">Your State Name</string>
    <string name="_000">0</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="dead">Dead</string>
    <string name="calender">Calender</string>
    <string name="todo">TODO</string>
    <string name="_011_23978076">+91–11–2397–8076</string>
    <string name="helpline_numbers">Helpline numbers :</string>
    <string name="call_now">Call Now</string>
    <string name="symptoms">Symptoms</string>
    <string name="prevention">Prevention</string>
    <string name="helpful_text_quoted">\" This will pass too. Enjoy your time at home and spend quality time with your family! Things will be normal soon. \"</string>
    <string name="more_helpline_no"><u>See more...</u></string>
    <string name="stay_upto_date_with_latest_news_on_covid_19">Stay up to date with latest news on Covid-19</string>
    <string name="everything_you_need_to_know_about_covid_19">Everything you need to know about Covid-19</string>
    <string name="covid_19_realtime_spreading_in_map_view">Covid-19 Realtime Spreading in World-Map View</string>
    <string name="hospitals">Hospitals</string>
    <string name="online_scams">Online Scams</string>
    <string name="why_do_we_need_these"><u>Why do we need these?</u></string>
    <string name="submit">Submit</string>
    <string name="enter_mobile_number">&#160;Enter Mobile Number</string>
    <string name="full_name">&#160;Full Name</string>
    <string name="other_states">Other States</string>
    <string name="emergency_helpline_numbers">Emergency Helpline Numbers</string>
    <string name="_1800313444222">1800313444222</string>
    <string name="fever_des">Fever is when a human\'s body temperature goes above the normal range of  36.5 – 37.5°C or 97.7 – 99.5°F.</string>
    <string name="cough_des">A sudden, forceful hacking sound to release air and clear an irritation in the throat or airway.</string>
    <string name="shortnessOfBreath_des">Shortness of breath is an uncomfortable condition that makes it difficult to fully get air into your lungs.</string>
    <string name="achesAndPains_des">Body aches are a common symptom of many conditions. Aches can also be caused by your everyday life, especially if you stand,
        walk, or exercise for long periods of time</string>
    <string name="headache_des">A painful sensation in any part of the head, ranging from sharp to dull, that may occur with other symptoms.</string>
    <string name="sore_throat_des">Pain or irritation in the throat that can occur with or without swallowing, often accompanies infections, such as a cold or flu.</string>
    <string name="diarrhea_des">Loose, watery bowel movements that may occur frequently and with a sense of urgency.</string>
    <string name="shortness_of_breath">Shortness \nof breath</string>
    <string name="prevention_des_text">As they say, \"Prevention is BETTER than CURE\" \n\nStay Home, Stay Safe!</string>
    <string name="handwashing_text_prevention_cardview">Wash and rub your hands properly with soup (or sanitizer) and warm water for at least 20 seconds.</string>
    <string name="social_distancing_text_prevention_cardview">Stay home and work remotely.
        If you must go out for necessities, keep 6 feet distance from others. </string>
    <string name="cough_and_sneeze_text_prevention_cardview">Use a tissue or sneeze into your elbow. Wash your hands carefully after you sneeze or cough.</string>
    <string name="wear_facemask_text_prevention_cardview">Everyone should wear a cloth face cover when they have to go out in public,
        for necessities.</string>
    <string name="dont_touch_face_text_prevention_cardview">Coronavirus can live on hard surfaces for up to 72 hours.
        You can get the virus on your hands if you touch those surfaces</string>
    <string name="stay_at_home_text_prevention_cardview">Please Stay home and stay safe, it buys a little time for our
        scientists and researchers to find cure to this problem.</string>
    <string name="clean_and_disinfect_text_prevention_cardview">Clean and disinfect daily. This includes tables, doorknobs, light switches,
        handles, desks, phones, keyboards, toilets, faucets, and even sinks.</string>
    <string name="eat_healthy_text_prevention_cardview">Practicing food safety and good personal hygiene are always important,
        handwashing is especial in reducing the COVID-19 spread.</string>
    <string name="do_some_exercise_text_prevention_cardview">WHO recommends 150 minutes of moderate-intensity or 75 minutes of vigorous-intensity
        physical activity per week at home, with no equipment.</string>
    <string name="mail_developer">Email Address \-\-> <u>joyappsdevteam@gmail.com</u></string>
    <string name="about_us_down">\n\nDesign and Develop By \nArindam Saha\nAtul Ranjan\nJoykishan Sharma</string>
    <string name="fever_symptom_name">Fever</string>
    <string name="fever_data_overview">Fever is also known as hyperthermia, pyrexia, or elevated temperature. It describes a body temperature that’s higher than normal.
        Fever can affect children and adults. \n\nA short-term increase in body temperature can help your body fight off illness. However, a severe fever can be a symptom of
        a serious condition that requires immediate medical attention.</string>
    <string name="fever_data_what_to_look">Fever is one of the common symptom of Coronavius cases. Recognizing a fever can enable you to get treatment and proper monitoring
        for it. Normal body temperature is typically around 98.6°F (37°C). However, the normal body temperature for each person can vary slightly.Normal body temperature
        may also fluctuate depending on the time of day. It tends to be lower in the morning and higher in the late afternoon and evening. \n\nIn general, a baby has a
        fever when their body temperature exceeds 100.4°F (38°C). A child has a fever when their temperature exceeds 99.5°F (37.5°C). An adult has a fever when their
        temperature exceeds 99–99.5°F (37.2–37.5°C).</string>
    <string name="fever_data_when_to_see_a_doctor">A mild fever can typically be treated at home. In some cases, however, a fever can be a symptom of a serious medical
        condition that requires prompt treatment. \n\nYou should take your infant to a doctor if they’re:
        \n\n\t\t•	younger than 3 months old and have a temperature exceeding 100.4°F (38°C)
        \n\n\t\t•	between 3 and 6 months old, have a temperature over 102°F (38.9°C), and seem unusually irritable, lethargic, or uncomfortable
        \n\n\t\t•	between 6 and 24 months old and have a temperature higher than 102°F (38.9°C) that lasts longer than one day
        \n\n\tYou should take your child to see a doctor if they:
        \n\n\t\t•	have a body temperature exceeding 102.2°F (39°C)
        \n\n\t\t•	have had a fever for more than three days
        \n\n\t\t•	make poor eye contact with you
        \n\n\t\t•	seem restless or irritable
        \n\n\t\t•	have recently had one or more immunizations
        \n\n\t\t•	have a serious medical illness or a compromised immune system</string>
    <string name="dry_cough_symptom_name">Dry Cough</string>
    <string name="dry_cough_data_overview">Coughing is a common reflex action that clears your throat of mucus or foreign irritants.
        While everyone coughs to clear their throat from time to time, a number of conditions can cause more frequent coughing.
        \n\n\tBasically, a dry cough is one where no mucus or phlegm is produced with the cough. Conversely, a wet cough is one filled with mucus or
        phlegm where someone can actually feel the mucus move in their bronchi or throat, mucus expectorates or leaves the chest with each (wet) cough.</string>
    <string name="social_distancing_prevention_name">Take social distancing seriously</string>
    <string name="social_distancing_prevention_details_topic1">Why practice social distancing?</string>
    <string name="social_distancing_prevention_details_ans1">COVID-19 spreads mainly among people who are in close contact (within about
        6 feet) for a prolonged period. Spread happens when an infected person coughs, sneezes, or talks, and droplets from their mouth
        or nose are launched into the air and land in the mouths or noses of people nearby. The droplets can also be inhaled into the
        lungs. Recent studies indicate that people who are infected but do not have symptoms likely also play a role in the spread of
        COVID-19.</string>
    <string name="social_distancing_prevention_details_topic2">Tips for social distancing</string>
    <string name="social_distancing_prevention_details_ans2">\t\t• If you need to shop for food or medicine at the grocery store or pharmacy,
        stay at least 6 feet away from others.
        \n\n\t• Use mail-order for medications, if possible.
        \n\n\t• Consider a grocery delivery service.
        \n\n\t• Cover your mouth and nose with a cloth face cover when around others, including when you have to go out in public,
        for example to the grocery store.
        \n\n\t• Stay at least 6 feet between yourself and others, even when you wear a face covering.
        \n\n\t• Avoid large and small gatherings in private places and public spaces, such a friend’s house, parks, restaurants,
        shops, or any other place.
        \n\n\t• Work from home when possible.
        \n\n\t• If possible, avoid using any kind of public transportation, ridesharing, or taxis.
        \n\n\t• If you are a student or parent, talk to your school about options for digital/distance learning.</string>
    <string name="social_distancing_prevention_details_topic3"> </string>
    <string name="social_distancing_prevention_details_ans3"> </string>
    <string name="cover_your_mouth_prevention_data">Sneezing or coughing with no hands won\’t just embarrass your parents,
        it\’ll likely shoot germs over 10 feet to other surfaces, where they can live for weeks until someone comes in contact
        with them. It makes you rethink touching those elevator buttons or picking up magazines in a waiting room.Sneezes and
        coughs spread all kinds of germs, and it’s best to cover them the correct way to prevent spreading illness.</string>
    <string name="about_us_text">Thank you very much for downloading this App. If you have any Suggestion or Query, Feel free to mail us. You can mail us at</string>
    <string name="team_name">Joy Apps Developers Team</string>
</resources>