<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_view"
    tools:context=".AboutUsActivity">

    <ImageView
        android:id="@+id/logo_developer"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/joyappslogo"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_developer"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        android:textColor="#00E2FF"
        android:textStyle="bold"
        android:text="@string/team_name"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="36dp"/>

    <TextView
        android:id="@+id/about_us_para"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_developer"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:fontFamily="@font/cherry_swash"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/about_us_text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/email_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_developer"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_below="@id/about_us_para"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/cherry_swash"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/cherry_swash"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/about_us_down"
        android:layout_below="@+id/email_developer"
        android:textStyle="bold"
        android:textSize="16sp"/>

</RelativeLayout>