<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:background="@drawable/alertdialog_symptom_detail_background"
    android:layout_marginBottom="30dp"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/prevention_name_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prevention_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/social_distancing_prevention_name"
            android:textColor="#E91E63"
            android:textSize="22sp"
            android:layout_toStartOf="@+id/closeAlertDialog"/>

        <ImageView
            android:id="@+id/closeAlertDialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_close_black_24dp"/>

    </RelativeLayout>

    <View
        android:id="@+id/line_symptoms"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/prevention_name_linearLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="#737272" />

    <ScrollView
        android:id="@+id/scrollView_symptomsdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_symptoms"
        android:layout_marginBottom="12dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/prevention_detail_large_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/avoid_close_contact"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/prevention_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start"
                android:layout_below="@id/prevention_detail_large_image"
                android:text="@string/cover_your_mouth_prevention_data"
                android:textColor="#3F51B5"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/prevention_details_topic1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:layout_below="@id/prevention_data"
                android:text="@string/social_distancing_prevention_details_topic1"
                android:textColor="#009688"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/prevention_details_ans1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start"
                android:layout_below="@id/prevention_details_topic1"
                android:text="@string/social_distancing_prevention_details_ans1"
                android:textColor="#3F51B5"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/prevention_details_topic2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:layout_below="@id/prevention_details_ans1"
                android:text="@string/social_distancing_prevention_details_topic2"
                android:textColor="#009688"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/prevention_details_ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start"
                android:layout_below="@id/prevention_details_topic2"
                android:justificationMode="inter_word"
                android:text="@string/social_distancing_prevention_details_ans2"
                android:textColor="#3F51B5"
                android:textSize="14sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/prevention_details_topic3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:layout_below="@id/prevention_details_ans2"
                android:text="@string/social_distancing_prevention_details_topic3"
                android:textColor="#009688"
                android:textSize="18sp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/prevention_details_ans3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start"
                android:layout_below="@id/prevention_details_topic3"
                android:justificationMode="inter_word"
                android:text="@string/social_distancing_prevention_details_ans3"
                android:textColor="#3F51B5"
                android:textSize="14sp"
                android:layout_marginBottom="16dp"/>



        </RelativeLayout>

    </ScrollView>

</RelativeLayout>